--- a/web-app/src/app/user/add/add.component.html
+++ b/web-app/src/app/user/add/add.component.html
@@ -1,1 +1,100 @@
-<p>add works!</p>
+<div class="main">
+  <h1>新增用户</h1>
+  <hr>
+  <form class="container-sm content" style="margin: 40px 0px 0px 0px" [formGroup]="formGroup">
+    <div class="mb-3 row">
+      <label for="username" class="col-sm-2 col-form-label">用户名：</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="username" formControlName="username" id="username">
+        <small class="text-danger"
+               *ngIf="formGroup?.get('username')!.invalid">
+          用户名不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label for="name" class="col-sm-2 col-form-label">姓名：</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="name" formControlName="name" id="name">
+        <small class="text-danger"
+               *ngIf="formGroup?.get('name')!.invalid">
+          姓名不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学校名称：</label>
+      <div class="col-sm-10">
+        <app-school-select (selected)="onSchoolSelected($event)"></app-school-select>
+        <small class="text-danger"
+               *ngIf="formGroup?.get('school')!.invalid">
+          学校不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row" *ngIf="!formGroup?.get('school')!.invalid">
+      <label class="col-sm-2 col-form-label">班级名称</label>
+      <div class="col-sm-10">
+        <select class="form-control" formControlName="klass_id">
+          <option value="null">请选择班级</option>
+          <option *ngFor="let klass of klasses" [value]="klass.id">
+            {{klass.name}}
+          </option>
+        </select>
+        <small class="text-danger"
+               *ngIf="formGroup.get('klass_id')!.invalid">
+          必须指定一个班级
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">性别：</label>
+      <div class="col-sm-10">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="sex-male"
+                 name="sex"
+                 formControlName="sex"
+                 [value]=true>
+          <label class="form-check-label" for="sex-male">男</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="sex-female"
+                 name="sex"
+                 formControlName="sex"
+                 [value]=false>
+          <label class="form-check-label" for="sex-female">女</label>
+        </div>
+      </div>
+    </div>
+    <div class="mb-3 row" *ngIf="me?.role === 1">
+      <label class="col-sm-2 col-form-label">角色：</label>
+      <div class="col-sm-10">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio"
+                 name="role"
+                 formControlName="role"
+                 [value]="2">
+          <label class="form-check-label">管理员</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio"
+                 name="role"
+                 formControlName="role"
+                 [value]="3">
+          <label class="form-check-label">普通用户</label>
+        </div>
+      </div>
+    </div>
+    <div class="mb-3 row" style="margin: 30px 0px 0px 0px">
+      <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+        <button class="btn btn-primary" (click)="onSubmit()"
+                [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
+        </button>
+      </div>
+      <div class="col-sm-3 offset-sm-1">
+        <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+      </div>
+    </div>
+  </form>
+
+</div>
