--- a/web-app/src/app/course/index/index.component.html
+++ b/web-app/src/app/course/index/index.component.html
@@ -65,7 +65,7 @@
       <td>{{ course.klass.name }}</td>
       <td>{{ course.term.name }}</td>
       <td>{{ course.name }}</td>
-      <td>{{ course.sory }}</td>
+      <td>{{ course.sory | sory}}</td>
       <td>{{ course.week }}</td>
       <td>{{ course.day }}</td>
       <td>{{ course.period }}</td>
@@ -76,8 +76,8 @@
         <a class="btn btn-outline-primary btn-sm" (click)="openEditDialog(course.id)">
           <i class="fas fa-pen" ></i>编辑
         </a>
-        <span class="btn btn-sm btn-outline-danger" *ngIf="role !== 3">
-            <i class="far fa-trash-alt"></i>删除
+        <span class="btn btn-sm btn-outline-danger" *ngIf="role === 3" (click)="onDelete(course)">
+            <i class="far fa-trash-alt" ></i>删除
         </span>
       </td>
     </tr>
