--- a/web-app/src/app/term/edit/edit.component.html
+++ b/web-app/src/app/term/edit/edit.component.html
@@ -2,7 +2,7 @@
   <h1>编辑学期</h1>
   <hr>
   <form class="container-sm content" [formGroup]="formGroup!" style="margin: 40px 0px 0px 0px">
-    <div class="mb-3 row">
+    <div class="mb-3 row" *ngIf="canEdit">
       <label class="col-sm-2 col-form-label">学校名称：</label>
       <div class="col-sm-10">
         <app-school-select [school]="term.school!" (selected)="onSelected($event)"></app-school-select>
